--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   firebase_auth: ^4.1.3
   # firebase: ^9.0.3
   flutter_spinkit: ^5.1.0
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
